Socket/src/main/java/com/example/socket/error/Exception/BusinessException.java
package com.example.socket.error.Exception;

import com.example.socket.error.ErrorCode;
import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class BusinessException extends RuntimeException{
    private final ErrorCode errorCode;
}
